<resources>
    <string name="app_name">Chiller-Filler</string>
    <string name="f_Name">Job Title<font color='#FF0000'></font></string>
    <string name="l_Name">Last Name<font color='#FF0000'></font></string>
    <string name="mob_land">Daytime Phone(landline)<font color='#FF0000'></font></string>
    <string name="mob_No">Phone Number<font color='#FF0000'></font></string>
    <string name="eMail">E-mail Address<font color='#FF0000'></font></string>
    <string name="DOB">Date Of Birth(dd/mm/yyyy)</string>

    <string name="subject">Subject<font color='#FF0000'></font></string>
    <string name="message">Message<font color='#FF0000'></font></string>

    <string name="home_fragment">Home Fragment</string>
    <string name="sport_fragment">Sport Fragment</string>
    <string name="movie_fragment">Movie Fragment</string>


    <string name="LOADING_PLEASE_WAIT">Loading Please wait..</string>
    <string name="NO_INTERNET_CONNECTION">No internet connection</string>
    <string name="FIELD_ARE_REQUIRED">Field are required</string>
    <string name="CANT_ADD_MORE_THAN_10">Can\'t add quantity more than 10 </string>


    <string name="greidient">Chicken (80%),Supergreens Filling(11.4%)(Coocked Quinoa(Quinoa Water),Kale,Spinach,Regglano Parmesan(Milk),Low Fat Soft Cheese Sea Salt,Cracked Black Pepper),Crumb(8.6%)(Crumb(Dehydrated Potato Flour,Sodium Metabisulphite),Rice Flour,Salt,Emulsifler (E471),laize Dextrose),Reggiano Parmesan(Milk),Repeseed Oil,Mozzarella (Milk),Dried Basil,Lemon Zest,Garlic Poweder,Sea Salt,Cracked Black Pepper) Allergy Advice:For allergence see ingredients in bold. \nOrigin:EU</string>


    <string-array name="arrDeliveryTime">
        <item>Standard</item>
        <item>Pre 10:30</item>
        <item>Pre 12</item>
    </string-array>


    <string-array name="arrTitle">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Miss</item>
        <item>Doctor</item>
    </string-array>


   <!-- <string-array name="arrDeliveryTime">
        <item>9:30 AM - 10:30 AM</item>
        <item>10:30 AM - 11:30 AM</item>
        <item>2:30 PM - 3:30 PM</item>
        <item>4:30 PM - 6:30 PM</item>
        <item>7:30 PM - 8:30 PM</item>
        <item>9:30 AM - 10:30 AM</item>
        <item>10:30 AM - 11:30 PM</item>
        <item>2:30 PM - 3:30 PM</item>
        <item>4:30 PM - 6:30 PM</item>
        <item>7:30 PM - 8:30 PM</item>

    </string-array>-->



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">johnDoe@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="homeFragment">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="aboutFragment">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="favoritesFragment">Favorites</string>

</resources>